--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" ng-app="phonecatApp">
+<html lang="en">
   <base href="/app/">
   <head>
     <meta charset="utf-8">
@@ -13,8 +13,9 @@
     <script src="lib/angular-animate/angular-animate.js"></script>
     <script src="lib/angular-resource/angular-resource.js"></script>
     <script src="lib/angular-route/angular-route.js"></script>
+    
     <script src="app.module.ajs.js"></script>
-    <script src="app.module.js"></script>
+
     <script src="app.config.js"></script>
     <script src="app.animations.js"></script>
     <script src="core/core.module.js"></script>
@@ -30,8 +31,9 @@
     <script src="/node_modules/zone.js/dist/zone.js"></script>
     <script src="/node_modules/systemjs/dist/system.src.js"></script>
     <script src="/systemjs.config.js"></script>
+
     <script>
-      System.import('/app');
+      System.import('app');
     </script>
   </head>
   <body>
